# paddleocr-vl

./: .env.example  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.docker.txt
deploy/: layout_server.py  vllm_config.yaml
deploy/hps/server/: pipeline_config.yaml
deploy/hps/server/model_repo/layout-parsing/: config_cpu.pbtxt
docs/: API.md
paddlocr_vl/: jobs.py  layout_worker.py  main.py  schemas.py  vlm_worker.py
paddlocr_vl/api/routes/: documents.py
paddlocr_vl/core/: config.py  dependencies.py  logger.py
paddlocr_vl/db/: jobs.py
paddlocr_vl/service/: __init__.py  layout.py  paddleocr_vl.py  vllm.py
paddlocr_vl/utils/: file_utils.py  markdown_assembler.py
paddlocr_vl/workers/: layout.py  vlm.py
tests/: conftest.py  test_api.py  test_config.py  test_file_utils.py  test_jobs.py  test_layout_worker.py  test_markdown_assembler.py  test_region_queue.py  test_service.py  test_vllm.py
